# calculator-demo

./: .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  README.md  pyproject.toml
.github/actions/code-quality/pre-commit/: action.yaml
.github/actions/pytest/: action.yaml
.github/actions/security/bandit/: action.yaml
.github/actions/security/clamav/: action.yaml
.github/actions/security/semgrep/: action.yaml
.github/actions/security/trivy/: action.yaml
.github/actions/security/validate-tools/: action.yaml
.github/workflows/: _reusable-artifact-builder.yaml  _reusable-code-quality.yaml  _reusable-production-release-process.yaml  _reusable-rc-release-process.yaml  _reusable-release-publisher.yaml  _reusable-release-status.yaml  _reusable-release-validation.yaml  _reusable-security-scan.yaml  _reusable-test-suite.yaml  _reusable-version-check.yaml  pr-checks.yaml  pr.yaml  release.yaml  security-checks.yaml
src/calculator/: __init__.py  operations.py
tests/integration/: test_calculator.py
tests/unit/: test_operations.py
