[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator-demo"
version = "0.1.0"
description = "A simple calculator package demonstrating CI/CD pipeline"
readme = "README.md"
authors = [
    { name = "Name Surname", email = "my.email@example.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/calculator"]

[project.urls]
Homepage = "https://github.com/samet-akcay/calculator-demo"
Issues = "https://github.com/samet-akcay/calculator-demo/issues"

[tool.pytest.ini_options]
addopts = "-v --cov=calculator --cov-report=xml --cov-report=term --junitxml=pytest.xml --json-report"
testpaths = ["tests"]

[tool.coverage.run]
packages = ["src/calculator"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.1",
    "pytest-json-report>=1.5",
    "pytest-xdist>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
]
